soc/google/cpif: add vendor hook to support iperf MID pref
add a vendor specific wake flag to prevent cluster needless bouncing
between clusters

Change-Id: I596ad6ea9b962da750ddc4202fc2fd4e4f22ea42
Signed-off-by: Namkyu Kim <namkyu78.kim@samsung.com>

--- a/drivers/soc/google/cpif/Makefile
+++ b/drivers/soc/google/cpif/Makefile
@@ -12,6 +12,8 @@ obj-$(CONFIG_EXYNOS_DIT) += dit/
 
 obj-$(CONFIG_CPIF_DIRECT_DM) += direct_dm.o
 
+obj-$(CONFIG_CPIF_VENDOR_HOOK) += hook.o
+
 obj-$(CONFIG_EXYNOS_MODEM_IF) += cpif.o
 cpif-y += modem_main.o modem_variation.o
 cpif-y += modem_io_device.o net_io_device.o bootdump_io_device.o ipc_io_device.o modem_toe_device.o
