soc/google/cpif: refactor MODEM_IF_LEGACY_QOS
Use MODEM_IF_QOS as the default QoS feature. MODEM_IF_LEGACY_QOS will
select MODEM_IF_QOS.

dev selection in tx_flowctrl_suspend/resume and txq_start/stop has no
meaning. They don't control high prio queue.

Change-Id: I4aa5b880dcf669e64cde06b80a6d9d0c62669dc4
Signed-off-by: Dongseok Yi <dseok.yi@samsung.com>

--- a/drivers/soc/google/cpif/Kconfig
+++ b/drivers/soc/google/cpif/Kconfig
@@ -93,13 +93,14 @@ config HW_REV_DETECT
 	default n
 
 config MODEM_IF_QOS
-	tristate "Implement QoS for sbd"
+	tristate "Implement QoS"
 	default n
 	help
-	  This enables QoS for SBD model
+	  This enables QoS
 
 config MODEM_IF_LEGACY_QOS
 	tristate "Implement QoS for legacy buffer"
+	select MODEM_IF_QOS
 	default n
 	help
 	  This enables QoS for legacy buffer model
