soc/google/cpif: Add umts_toe0 dev and check 6_to_4 ready
CLAT HW can be vary. If there is no unified dev, userspace app should
choose a dev explicitly. Make a dev named /dev/umts_toe0 to overcome
such complexity. User can control multiple HW by the dev.

toe_check_6_to_4_ready is for forecasting 6_to_4 on kernel network
stack. Because bpf_skb_proto_6_to_4 does not support UDP GRO with
fraglist. It replaces check_hw_support_clat.

Change-Id: Ibcea335f8a395bc59ce10bf1a2a26dfbc05efe6c
Signed-off-by: Dongseok Yi <dseok.yi@samsung.com>

--- a/drivers/soc/google/cpif/Makefile
+++ b/drivers/soc/google/cpif/Makefile
@@ -14,7 +14,7 @@ obj-$(CONFIG_CPIF_DIRECT_DM) += direct_dm.o
 
 obj-$(CONFIG_EXYNOS_MODEM_IF) += cpif.o
 cpif-y += modem_main.o modem_variation.o
-cpif-y += modem_io_device.o net_io_device.o bootdump_io_device.o ipc_io_device.o
+cpif-y += modem_io_device.o net_io_device.o bootdump_io_device.o ipc_io_device.o modem_toe_device.o
 cpif-y += modem_utils.o modem_dump.o
 
 cpif-y += link_device.o link_device_memory_flow_control.o
