soc/google/cpif: Ready for page recycling logic for DIT rx
cpif page recycling logic is used for DIT RX path (local only)

Change-Id: I90eaea3d9bdbc4cc7eae72563156a13f93d240ee
Signed-off-by: Hyunsoon Kim <h10.kim@samsung.com>
Signed-off-by: Dongseok Yi <dseok.yi@samsung.com>

--- a/drivers/soc/google/cpif/Kconfig
+++ b/drivers/soc/google/cpif/Kconfig
@@ -14,12 +14,14 @@ config SEC_MODEM_S5000AP
 	select MCU_IPC
 	select SHM_IPC
 	select CP_PMUCAL
+	select CPIF_PAGE_RECYCLING
 	default n
 
 config SEC_MODEM_S5100
 	tristate "Exynos S51xx"
 	select BOOT_DEVICE_SPI
 	select LINK_DEVICE_PCIE
+	select CPIF_PAGE_RECYCLING
 	default n
 
 menu "Configuration Description"
@@ -179,6 +181,12 @@ config CH_EXTENSION
 	default n
 	help
 	  Enable Channel Extension
+
+config CPIF_PAGE_RECYCLING
+	tristate "Enable page recycling"
+	default n
+	help
+	  This enables page recycling to improve alloc overhead
 
 config CP_THERMAL
     tristate "Enable CP thermal zones"
