--- a/drivers/soc/google/cpif/Makefile
+++ b/drivers/soc/google/cpif/Makefile
@@ -10,6 +10,8 @@ obj-$(CONFIG_BOOT_DEVICE_SPI) += boot_device_spi.o
 
 obj-$(CONFIG_EXYNOS_DIT) += dit/
 
+obj-$(CONFIG_CPIF_PAGE_RECYCLING) += cpif_page.o
+
 obj-$(CONFIG_CPIF_DIRECT_DM) += direct_dm.o
 
 obj-$(CONFIG_CPIF_VENDOR_HOOK) += hook.o
@@ -18,10 +20,10 @@ obj-$(CONFIG_EXYNOS_MODEM_IF) += cpif.o
 cpif-y += modem_main.o modem_variation.o
 cpif-y += modem_io_device.o net_io_device.o bootdump_io_device.o ipc_io_device.o modem_toe_device.o
 cpif-y += modem_utils.o modem_dump.o
-
 cpif-y += link_device.o link_device_memory_flow_control.o
 cpif-y += link_device_memory_debug.o modem_notifier.o
-cpif-y += link_device_memory_snapshot.o link_device_memory_sbd.o link_device_memory_legacy.o cpif_page.o
+cpif-y += link_device_memory_snapshot.o link_device_memory_sbd.o link_device_memory_legacy.o
+
 cpif-$(CONFIG_EXYNOS_CPIF_IOMMU) += cpif_netrx_mng.o cpif_vmapper.o
 
 cpif-$(CONFIG_LINK_DEVICE_PCIE) += s51xx_pcie.o
