soc/google/cpif: Fix to enable vendor hook
Add the missing CPIF_VENDOR_HOOK config and the module declaration.

Change-Id: I6442ff40ff5bcdcee3488719c211b12cee007ff4
Signed-off-by: Dongseok Yi <dseok.yi@samsung.com>

--- a/drivers/soc/google/cpif/Kconfig
+++ b/drivers/soc/google/cpif/Kconfig
@@ -182,6 +182,12 @@ config CH_EXTENSION
 	help
 	  Enable Channel Extension
 
+config CPIF_VENDOR_HOOK
+	tristate "Enable Android vendor hook"
+	default n
+	help
+	  This enables Android vendor hook
+
 config CPIF_PAGE_RECYCLING
 	tristate "Enable page recycling"
 	default n
