soc/google/cpif: apply pktproc rx clat
write clat info to shmem

Change-Id: I07b38bf7c2d9ed4c6e8961d85a6990b0bb8cc127
Signed-off-by: Namkyu Kim <namkyu78.kim@samsung.com>

--- a/drivers/soc/google/cpif/Kconfig
+++ b/drivers/soc/google/cpif/Kconfig
@@ -194,6 +194,12 @@ config CPIF_PAGE_RECYCLING
 	help
 	  This enables page recycling to improve alloc overhead
 
+config CP_PKTPROC_CLAT
+	tristate "Enable HW PKTPROC CLAT"
+	default n
+	help
+	  Enable HW pktproc clat
+
 config CP_THERMAL
     tristate "Enable CP thermal zones"
     depends on THERMAL
