soc/google/cpif: Enable -Wformat and -Wformat-zero-length
Enable -Wformat and -Wformat-zero-length per "-Wformat clean" policy.

Change-Id: Ia05f68c8c6c37450110893b0f2fbe08f3992775f
Signed-off-by: Dongseok Yi <dseok.yi@samsung.com>

--- a/drivers/soc/google/cpif/Makefile
+++ b/drivers/soc/google/cpif/Makefile
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0
 # Makefile of cpif
 
+ccflags-y += -Wformat
+ccflags-y += -Wformat-zero-length
 ccflags-y += -DCONFIG_OPTION_REGION=\"$(PROJECT_REGION)\"
 subdir-ccflags-y += -I$(srctree)/$(src)
 
