soc/google/cpif: make LRO config
current version of LRO requires too much padding size
in front of socket buffer. Therefore, it is waste of
memory when modem does not support LRO. Therefore, we
move LRO as a CONFIG, and let non-LRO modem to use
less memory for each IP packet.

Change-Id: I466635c38262916017de8e0c4a15f22d53cd04e4
Signed-off-by: Hyunsoon Kim <h10.kim@samsung.com>

--- a/drivers/soc/google/cpif/Kconfig
+++ b/drivers/soc/google/cpif/Kconfig
@@ -196,6 +196,12 @@ config CP_PKTPROC_CLAT
 	help
 	  Enable HW pktproc clat
 
+config CP_PKTPROC_LRO
+	tristate "Enable HW PKTPROC LRO"
+	default n
+	help
+	  Enable HW pktproc LRO
+
 config CP_THERMAL
     tristate "Enable CP thermal zones"
     depends on THERMAL
