Add tnr sysreg register name
Bug: none
Test: build
Change-Id: Id082f3884a96d3551182b405ff262452f5426710
Signed-off-by: Tianyu Jiang <tianyuj@google.com>

--- a/arch/arm64/boot/dts/google/gs101-isp.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-isp.dtsi
@@ -607,7 +607,8 @@
 			"tnr_ssmt_d5",
 			"tnr_ssmt_d6",
 			"tnr_ssmt_d7",
-			"tnr_qch";
+			"tnr_qch",
+			"tnr_sysreg";
 
 		clocks = <&clock UMUX_CLKCMU_TNR_BUS>;
 		clock-names = "UMUX_CLKCMU_TNR_BUS";
