arm64/dts: google: Add DT nodes for GSA GS101 S2MPU
Bug: 194261681
Signed-off-by: David Brazdil <dbrazdil@google.com>
Change-Id: I201480fa459e1b2f23a5bca0be928c7e82c9bfc6

--- a/arch/arm64/boot/dts/google/gs101-s2mpu.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-s2mpu.dtsi
@@ -187,6 +187,13 @@
 		power-domains = <&pd_hsi0>;
 	};
 
+	s2mpu_gsa: s2mpu_gsa@17c60000 {
+		compatible = "google,s2mpu";
+		reg = <0x0 0x17c60000 0x10000>;
+		interrupts = <GIC_SPI SYSMMU_S2MPU__INTERRUPT_GSA IRQ_TYPE_LEVEL_HIGH>;
+		off-at-boot;
+	};
+
 	s2mpu_ipp: s2mpu_ipp@1AD20000 {
 		compatible = "google,s2mpu";
 		reg = <0x0 0x1AD20000 0x10000>;
