--- a/arch/arm64/boot/dts/google/gs101-sysmmu.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-sysmmu.dtsi
@@ -71,6 +71,7 @@
 		port-name = "BO";
 		#iommu-cells = <0>;
 		power-domains = <&pd_bo>;
+		s2mpus = <&s2mpu_bo>;
 		sysmmu,no-s2pf;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x2,  0x1F)>,
@@ -91,6 +92,7 @@
 		port-name = "CSIS0";
 		#iommu-cells = <0>;
 		power-domains = <&pd_csis>;
+		s2mpus = <&s2mpu_csis0>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1  TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x2,  0x7E)>,
 				      <2  TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x4,  0x7E)>,
@@ -121,6 +123,7 @@
 		port-name = "CSIS1";
 		#iommu-cells = <0>;
 		power-domains = <&pd_csis>;
+		s2mpus = <&s2mpu_csis1>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1  TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x2,  0xFE)>,
 				      <2  TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x4,  0xFE)>,
@@ -158,6 +161,7 @@
 		port-name = "DNS";
 		#iommu-cells = <0>;
 		power-domains = <&pd_dns>;
+		s2mpus = <&s2mpu_dns>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = < 1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x2,  0xFE)>,
 				      < 2 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x0,  0xFE)>,
@@ -193,6 +197,7 @@
 		port-name = "DPU L0/L1";
 		#iommu-cells = <0>;
 		power-domains = <&pd_dpu>;
+		s2mpus = <&s2mpu_dpu0>;
 		sysmmu,default_tlb = <TLB_CFG(BL16, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1,  PREFETCH_PREDICTION) DIR_READ SYSMMU_ID_MASK(0x2, 0x7)>,
 				      <2 TLB_CFG(BL32, PREFETCH_PREDICTION) DIR_READ SYSMMU_ID_MASK(0x4, 0x7)>,
@@ -212,6 +217,7 @@
 		port-name = "DPU L2/L3";
 		#iommu-cells = <0>;
 		power-domains = <&pd_dpu>;
+		s2mpus = <&s2mpu_dpu1>;
 		sysmmu,default_tlb = <TLB_CFG(BL16, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1,  PREFETCH_PREDICTION) DIR_READ SYSMMU_ID_MASK(0x2, 0x7)>,
 				      <2 TLB_CFG(BL32, PREFETCH_PREDICTION) DIR_READ SYSMMU_ID_MASK(0x4, 0x7)>,
@@ -231,6 +237,7 @@
 		port-name = "DPU L4/L5/W";
 		#iommu-cells = <0>;
 		power-domains = <&pd_dpu>;
+		s2mpus = <&s2mpu_dpu2>;
 		sysmmu,default_tlb = <TLB_CFG(BL16, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1,  PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x2, 0x7)>,
 				      <2 TLB_CFG(BL32, PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x4, 0x7)>,
@@ -254,6 +261,7 @@
 		port-name = "G2D0";
 		#iommu-cells = <0>;
 		power-domains = <&pd_g2d>;
+		s2mpus = <&s2mpu_g2d0>;
 		sysmmu,default_tlb = <TLB_CFG(BL32, PREFETCH_PREDICTION)>;
 	};
 
@@ -268,6 +276,7 @@
 		port-name = "G2D1";
 		#iommu-cells = <0>;
 		power-domains = <&pd_g2d>;
+		s2mpus = <&s2mpu_g2d1>;
 		sysmmu,default_tlb = <TLB_CFG(BL32, PREFETCH_PREDICTION)>;
 	};
 
@@ -282,6 +291,7 @@
 		port-name = "JPEG";
 		#iommu-cells = <0>;
 		power-domains = <&pd_g2d>;
+		s2mpus = <&s2mpu_g2d2>;
 		sysmmu,default_tlb = <TLB_CFG(BL8, PREFETCH_NONE)>;
 	};
 
@@ -296,6 +306,7 @@
 		port-name = "G3AA";
 		#iommu-cells = <0>;
 		power-domains = <&pd_g3aa>;
+		s2mpus = <&s2mpu_g3aa>;
 		sysmmu,no-s2pf;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x8,  0x38)>,
@@ -319,6 +330,7 @@
 		port-name = "GDC0";
 		#iommu-cells = <0>;
 		power-domains = <&pd_gdc>;
+		s2mpus = <&s2mpu_gdc0>;
 		sysmmu,default_tlb = <TLB_CFG(BL32, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL32, PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x8, 0xE)>,
 				      <2 TLB_CFG(BL1,  PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x2, 0xE)>,
@@ -341,6 +353,7 @@
 		port-name = "GDC1";
 		#iommu-cells = <0>;
 		power-domains = <&pd_gdc>;
+		s2mpus = <&s2mpu_gdc1>;
 		sysmmu,default_tlb = <TLB_CFG(BL32, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL32, PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x8, 0xE)>,
 				      <2 TLB_CFG(BL1,  PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x2, 0xE)>,
@@ -363,6 +376,7 @@
 		port-name = "SCSC";
 		#iommu-cells = <0>;
 		power-domains = <&pd_gdc>;
+		s2mpus = <&s2mpu_gdc2>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = < 1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x4,  0x1E)>,
 				      < 2 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x8,  0x1E)>,
@@ -414,6 +428,7 @@
 		port-name = "IPP";
 		#iommu-cells = <0>;
 		power-domains = <&pd_ipp>;
+		s2mpus = <&s2mpu_ipp>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = < 1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x10,  0x3FE)>,
 				      < 2 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x20,  0x3FE)>,
@@ -460,6 +475,7 @@
 		port-name = "ITSC";
 		#iommu-cells = <0>;
 		power-domains = <&pd_mcsc>;
+		s2mpus = <&s2mpu_mcsc0>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x4, 0xE)>,
 				      <2 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x8, 0xE)>,
@@ -479,6 +495,7 @@
 		port-name = "MCSC";
 		#iommu-cells = <0>;
 		power-domains = <&pd_mcsc>;
+		s2mpus = <&s2mpu_mcsc1>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1  TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x4,  0x3E)>,
 				      <2  TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x8,  0x3E)>,
@@ -509,6 +526,7 @@
 		port-name = "MCSC";
 		#iommu-cells = <0>;
 		power-domains = <&pd_mcsc>;
+		s2mpus = <&s2mpu_mcsc2>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x4,  0x3E)>,
 				      <2 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x8,  0x3E)>,
@@ -532,6 +550,7 @@
 		port-name = "MFC0";
 		#iommu-cells = <0>;
 		power-domains = <&pd_mfc>;
+		s2mpus = <&s2mpu_mfc0>;
 		sysmmu,default_tlb = <TLB_CFG(BL8, PREFETCH_NONE)>;
 	};
 
@@ -547,6 +566,7 @@
 		port-name = "MFC1";
 		#iommu-cells = <0>;
 		power-domains = <&pd_mfc>;
+		s2mpus = <&s2mpu_mfc1>;
 		sysmmu,default_tlb = <TLB_CFG(BL8, PREFETCH_NONE)>;
 	};
 
@@ -561,6 +581,7 @@
 		port-name = "TNR0";
 		#iommu-cells = <0>;
 		power-domains = <&pd_tnr>;
+		s2mpus = <&s2mpu_tnr0>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_RW   SYSMMU_ID_MASK(0x4,  0x7C)>,
 				      <2 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_READ SYSMMU_ID_MASK(0x40, 0x7C)>,
@@ -579,6 +600,7 @@
 		port-name = "TNR1";
 		#iommu-cells = <0>;
 		power-domains = <&pd_tnr>;
+		s2mpus = <&s2mpu_tnr1>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_WRITE SYSMMU_ID_MASK(0x4, 0x3C)>,
 				      <2 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x0, 0x3C)>,
@@ -597,6 +619,7 @@
 		port-name = "TNR2";
 		#iommu-cells = <0>;
 		power-domains = <&pd_tnr>;
+		s2mpus = <&s2mpu_tnr2>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_READ SYSMMU_ID_MASK(0x4, 0x3C)>;
 		sysmmu,async-fault;
@@ -613,6 +636,7 @@
 		port-name = "TNR3";
 		#iommu-cells = <0>;
 		power-domains = <&pd_tnr>;
+		s2mpus = <&s2mpu_tnr3>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_READ SYSMMU_ID_MASK(0x4, 0x3C)>;
 		sysmmu,async-fault;
@@ -629,6 +653,7 @@
 		port-name = "TNR4";
 		#iommu-cells = <0>;
 		power-domains = <&pd_tnr>;
+		s2mpus = <&s2mpu_tnr4>;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
 		sysmmu,tlb_property = <1 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_RW    SYSMMU_ID_MASK(0x80, 0xC0)>,
 				      <2 TLB_CFG(BL1, PREFETCH_PREDICTION) DIR_READ  SYSMMU_ID_MASK(0x0,  0xC0)>,
@@ -647,6 +672,7 @@
 		port-name = "TPU";
 		#iommu-cells = <0>;
 		power-domains = <&pd_tpu>;
+		s2mpus = <&s2mpu_tpu>;
 		sysmmu,no-s2pf;
 		sysmmu,hide-page-fault;
 		sysmmu,default_tlb = <TLB_CFG(BL1, PREFETCH_PREDICTION)>;
