--- a/arch/arm64/boot/dts/google/gs101.dtsi
+++ b/arch/arm64/boot/dts/google/gs101.dtsi
@@ -158,6 +158,7 @@
 		clock-names = "eh-clock";
 		power-domains = <&pd_eh>;
 		google,eh,ignore-gctrl-reset;
+		s2mpus = <&s2mpu_eh>;
 	};
 
 	serial_0: uart@10A00000 {
