--- a/arch/arm64/boot/dts/google/gs101.dtsi
+++ b/arch/arm64/boot/dts/google/gs101.dtsi
@@ -614,7 +614,6 @@
 		#size-cells = <1>;
 		ranges;
 		power-domains = <&pd_hsi0>;
-		s2mpus = <&s2mpu_hsi0>;
 		status = "okay";
 
 		interrupts = <GIC_SPI IRQ_USB31DRD_GIC_0_HSI0 IRQ_TYPE_LEVEL_HIGH>;
@@ -667,6 +666,7 @@
 		/*	but refclk shouldn't be omitted */
 		phyclk_mux = "none";
 		phy_refclk = "phy_ref";
+		s2mpu = <&s2mpu_hsi0>;
 
 		/*
 		 * if Main phy has the other phy,
