CHROMIUM: arm64: dts: mediatek: mt8195: Fix video-codec dma-range length
This CL fixes the dts compile warning in video-codec:

  Warning (dma_ranges_format): /soc/video-codec@18000000:dma-ranges:
  "dma-ranges" property has invalid length (24 bytes)
  (parent #address-cells == 2, child #address-cells == 1,
   #size-cells == 1)

BUG=b:232131883
TEST=emerge-cherry sys-kernel/chromeos-kernel-5_10

Change-Id: I7a7e9945ccca69b0dc4b7c9f511bb0768847638e
Signed-off-by: Fei Shao <fshao@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/3820444
Reviewed-by: Yunfei Dong <yunfei.dong@mediatek.corp-partner.google.com>
Reviewed-by: Chen-Yu Tsai <wenst@chromium.org>

--- a/arch/arm64/boot/dts/mediatek/mt8195.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt8195.dtsi
@@ -2935,7 +2935,7 @@
 			      <0 0x18004000 0 0x1000>;      /* VDEC_RACING_CTRL */
 			mediatek,scp = <&scp>;
 			iommus = <&iommu_vdo M4U_PORT_L21_VDEC_MC_EXT>;
-			dma-ranges = <0x1 0x0 0x0 0x40000000 0x0 0xfff00000>;
+			dma-ranges = <0x1 0x0 0x40000000 0xfff00000>;
 			#address-cells = <1>;
 			#size-cells = <1>;
 			ranges = <0 0 0x18000000 0x26000>;
