--- a/chromeos/config/chromeos/armel/common.config
+++ b/chromeos/config/chromeos/armel/common.config
@@ -68,7 +68,7 @@ CONFIG_KERNEL_MODE_NEON=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_GPIO_POLLED=y
 CONFIG_LEDS_GPIO=y
-CONFIG_LSM="lockdown,yama,loadpin,safesetid,integrity,selinux,smack,tomoyo,apparmor"
+CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,selinux,smack,tomoyo,apparmor"
 CONFIG_MAC80211_DEBUGFS=y
 CONFIG_MAC80211_LEDS=y
 CONFIG_MEMORY=y
