--- a/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
@@ -129,7 +129,7 @@ CONFIG_IWLMVM=m
 CONFIG_IWLWIFI=m
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_LOCK_DOWN_KERNEL_FORCE_INTEGRITY=y
-CONFIG_LSM="lockdown,yama,loadpin,safesetid,integrity,chromiumos,selinux"
+CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,chromiumos,selinux"
 CONFIG_MARVELL_PHY=m
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
