--- a/chromeos/config/chromeos/x86_64/chromeos-intel-pineview.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-intel-pineview.flavour.config
@@ -90,6 +90,8 @@ CONFIG_RTW88_DEBUGFS=y
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_MOBILE_LPM_POLICY=3
 # CONFIG_SATA_PMP is not set
+CONFIG_SCSI_UFSHCD=y
+CONFIG_SCSI_UFSHCD_PCI=y
 CONFIG_SENSORS_ISL29018=m
 CONFIG_SERIO_RAW=y
 CONFIG_SND_HDA_CODEC_ANALOG=m
