--- a/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
@@ -55,12 +55,12 @@ CONFIG_DELL_WMI_AIO=m
 CONFIG_DELL_WMI_LED=m
 CONFIG_DMADEVICES=y
 CONFIG_DRM_AMDGPU=m
-CONFIG_DRM_GMA500=y
+CONFIG_DRM_GMA500=m
 # CONFIG_DRM_I2C_CH7006 is not set
 # CONFIG_DRM_I2C_SIL164 is not set
-CONFIG_DRM_I915=y
+CONFIG_DRM_I915=m
 CONFIG_DRM_I915_FORCE_PROBE="*"
-CONFIG_DRM_NOUVEAU=y
+CONFIG_DRM_NOUVEAU=m
 CONFIG_DRM_RADEON=m
 CONFIG_DRM_VIRTIO_GPU=y
 CONFIG_DW_DMAC=m
