--- a/drivers/net/wwan/t7xx/Makefile
+++ b/drivers/net/wwan/t7xx/Makefile
@@ -21,3 +21,6 @@ mtk_t7xx-y:=	t7xx_pci.o \
 		t7xx_pci_rescan.o \
 		t7xx_uevent.o \
 		t7xx_port_devlink.o
+
+mtk_t7xx-$(CONFIG_WWAN_DEBUGFS) += \
+		t7xx_port_trace.o \
