CHROMIUM: config: reven: Use module for MEDIA_SUPPORT
This shaves 0.1MiB off the vmlinuz size, which is helpful to free up a
little more space on the reven kernel partitions.

BUG=b:240321546
TEST=cros_workon_make --install chromeos-kernel-5_10
TEST=Test on an X1C, mc module is loaded and camera app works

Signed-off-by: Nicholas Bishop <nicholasbishop@google.com>
Change-Id: I2bed450a7c5ef2d4d0eab19a11995b2a30bdb3d3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/3913252
Reviewed-by: Jeffery Miller <jefferymiller@google.com>

--- a/chromeos/config/chromeos/x86_64/chromeos-intel-denverton.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-intel-denverton.flavour.config
@@ -31,6 +31,7 @@ CONFIG_IWLDVM=m
 CONFIG_IWLMVM=m
 CONFIG_IWLWIFI=m
 CONFIG_IXGBE=y
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
 # CONFIG_MOUSE_PS2_ALPS is not set
