--- a/chromeos/config/chromeos/arm64/common.config
+++ b/chromeos/config/chromeos/arm64/common.config
@@ -73,6 +73,7 @@ CONFIG_KFENCE_SAMPLE_INTERVAL=500
 CONFIG_LRU_GEN=y
 CONFIG_MAC80211_DEBUGFS=y
 CONFIG_MAC80211_LEDS=y
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_MMC_SDHCI_PLTFM=y
 # CONFIG_MOUSE_PS2 is not set
 CONFIG_MTD=y
