--- a/chromeos/config/chromeos/armel/common.config
+++ b/chromeos/config/chromeos/armel/common.config
@@ -71,6 +71,7 @@ CONFIG_LEDS_GPIO=y
 CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,selinux,smack,tomoyo,apparmor"
 CONFIG_MAC80211_DEBUGFS=y
 CONFIG_MAC80211_LEDS=y
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEMORY=y
 CONFIG_MFD_RK808=y
 CONFIG_MFD_TPS6586X=y
