--- a/chromeos/config/chromeos/x86_64/chromeos-amd-stoneyridge.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-amd-stoneyridge.flavour.config
@@ -51,6 +51,7 @@ CONFIG_I2C_DESIGNWARE_AMDPSP=y
 CONFIG_IRQ_REMAP=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_MAILBOX=y
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_MHI_BUS=y
 CONFIG_MHI_BUS_DEBUG=y
 CONFIG_MICROCODE_AMD=y
