--- a/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
@@ -131,6 +131,7 @@ CONFIG_KEYBOARD_GPIO=y
 CONFIG_LOCK_DOWN_KERNEL_FORCE_INTEGRITY=y
 CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,integrity,chromiumos,selinux"
 CONFIG_MARVELL_PHY=m
+CONFIG_MEDIA_SUPPORT=m
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
 CONFIG_MICROCODE_AMD=y
