--- a/chromeos/config/chromeos/x86_64/chromiumos-x86_64.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromiumos-x86_64.flavour.config
@@ -38,6 +38,7 @@ CONFIG_INTEL_PMC_CORE=y
 CONFIG_INTEL_SCU_PLATFORM=y
 CONFIG_INTEL_SOC_DTS_THERMAL=y
 CONFIG_KEYBOARD_GPIO=y
+CONFIG_MEDIA_SUPPORT=y
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
 CONFIG_MICROCODE_AMD=y
