CHROMIUM: config: Enable MAX98927 for AVS
BUG=b:249053253
TEST=AVS (speakers) works on Rammus (Shyvana/Leona)

Signed-off-by: Lukasz Majczak <lmajczak@google.com>
Change-Id: I3770e7e9572c6391bfeee849694738ad33e05926
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/3925551
Reviewed-by: Matt Davis <mattedavis@google.com>

--- a/chromeos/config/chromeos/x86_64/chromeos-intel-pineview.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-intel-pineview.flavour.config
@@ -109,6 +109,7 @@ CONFIG_SND_SOC_INTEL_AVS_MACH_DMIC=m
 CONFIG_SND_SOC_INTEL_AVS_MACH_HDAUDIO=m
 CONFIG_SND_SOC_INTEL_AVS_MACH_MAX98357A=m
 CONFIG_SND_SOC_INTEL_AVS_MACH_MAX98373=m
+CONFIG_SND_SOC_INTEL_AVS_MACH_MAX98927=m
 CONFIG_SND_SOC_INTEL_BYTCR_RT5640_MACH=m
 CONFIG_SND_SOC_INTEL_CHT_BSW_MAX98090_TI_MACH=m
 CONFIG_SND_SOC_INTEL_CHT_BSW_RT5645_MACH=m
