--- a/chromeos/config/termina/base.config
+++ b/chromeos/config/termina/base.config
@@ -303,8 +303,8 @@ CONFIG_SECURITY=y
 CONFIG_SECURITY_CHROMIUMOS=y
 # CONFIG_SECURITY_CHROMIUMOS_NO_SYMLINK_MOUNT is not set
 # CONFIG_SECURITY_CHROMIUMOS_NO_UNPRIVILEGED_UNSAFE_MOUNTS is not set
+CONFIG_SECURITY_LANDLOCK=y
 CONFIG_SECURITY_NETWORK=y
-CONFIG_SECURITY_PATH=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_YAMA=y
