--- a/PRESUBMIT.cfg
+++ b/PRESUBMIT.cfg
@@ -3,6 +3,7 @@
 cros lint = cros lint "$(for f in ${PRESUBMIT_FILES}; do [[ $f == */chromeos/* ]] && echo $f; done)"
 # Check technical debt tags.
 technical debt = chromeos/scripts/tech_debt.py
+commit message = chromeos/scripts/check_tags.py
 
 [Hook Overrides]
 checkpatch_check: true
