--- a/chromeos/config/chromeos/arm64/common.config
+++ b/chromeos/config/chromeos/arm64/common.config
@@ -71,6 +71,7 @@ CONFIG_KFENCE=y
 CONFIG_KFENCE_SAMPLE_INTERVAL=500
 # CONFIG_KFENCE_STATIC_KEYS is not set
 CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
 CONFIG_MAC80211_DEBUGFS=y
 CONFIG_MAC80211_LEDS=y
 CONFIG_MEDIA_SUPPORT=y
