CHROMIUM: config: reven: Add BMC150 accelerometer support
Add kernel module to support this accelerometer.

BUG=b:251501497
TEST=Ran `./chromeos/scripts/kernelconfig olddefconfig`
Ran `cros_workon_make --board reven --install chromeos-kernel-5_10`

Signed-off-by: Gwendal Grignou <gwendal@chromium.org>
Change-Id: I253de53138c93fa6ca15be0e9cf7a1e602d45b70
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/4014742
Reviewed-by: Allen Ballway <ballway@chromium.org>
Tested-by: Allen Ballway <ballway@chromium.org>

--- a/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-x86_64-reven.flavour.config
@@ -36,6 +36,7 @@ CONFIG_B43=m
 CONFIG_B43LEGACY=m
 CONFIG_B43_SDIO=y
 CONFIG_BATTERY_SBS=m
+CONFIG_BMC150_ACCEL=m
 CONFIG_BRCMSMAC=m
 CONFIG_BROADCOM_PHY=m
 CONFIG_COMPAL_LAPTOP=m
