--- a/arch/arm64/boot/dts/google/gs101-isp.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-isp.dtsi
@@ -693,8 +693,7 @@
 			"itsc",
 			"sysreg_dns",
 			"ssmt_d0_itsc",
-			"ssmt_d1_itsc",
-			"sysreg_dns";
+			"ssmt_d1_itsc";
 
 		clocks =
 			<&clock UMUX_CLKCMU_ITP_BUS>,
