--- a/chromeos/config/chromeos/x86_64/chromeos-intel-pineview.flavour.config
+++ b/chromeos/config/chromeos/x86_64/chromeos-intel-pineview.flavour.config
@@ -7,6 +7,7 @@ CONFIG_ATA=y
 CONFIG_ATA_GENERIC=y
 CONFIG_ATA_PIIX=y
 CONFIG_BATTERY_SBS=m
+CONFIG_BT_HCIBTUSB_MTK=y
 CONFIG_CEC_CROS_EC=m
 CONFIG_CHARGER_WILCO=m
 CONFIG_CHROMEOS_PRIVACY_SCREEN=y
@@ -65,6 +66,7 @@ CONFIG_MISC_RTSX_PCI=y
 CONFIG_MMC_REALTEK_PCI=y
 # CONFIG_MOUSE_PS2_ALPS is not set
 # CONFIG_MOUSE_PS2_SYNAPTICS is not set
+CONFIG_MT7921E=m
 CONFIG_MTK_T7XX=m
 CONFIG_NR_CPUS=24
 CONFIG_PCI_MSI=y
